--- a/cli/.goreleaser.yml
+++ b/cli/.goreleaser.yml
@@ -11,5 +11,7 @@ builds:
       - arm64
       - arm
       - 386
+    ldflags:
+      - -s -w -X "main.versionString={{.Env.CLIVERSION}}"
     env:
       - CGO_ENABLED=0
