Fix some tests not being run for test target
No clue why, the syntax ./... was menat to mean all files

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -22,9 +22,9 @@ lint:
 test: .test.log
 
 .test.log: go.* *.go
-	set -o pipefail && \
-		go test ./... | tee .test.log || \
-		rm .test.log
+	trap "rm .test.log" EXIT && \
+		set -o pipefail && \
+		go test | tee .test.log
 
 coverage.html: go.* *.go
 	go test -covermode=count -coverprofile=coverage.out
