--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
       uses: goreleaser/goreleaser-action@v2
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        args: release --rm-dist
+        args: release --clean
         workdir: ./cli
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
