--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
     - name: Set up project
       run: make setup
 
+    - name: Build binary
+      run: make build
+
     - name: Lint project, core part
       uses: golangci/golangci-lint-action@v2
       with:
@@ -42,12 +45,25 @@ jobs:
         version: latest
         skip-go-installation: true
 
+    - name: Build all release binaries on main
+      uses: goreleaser/goreleaser-action@v4
+      if: ${{ github.ref == 'refs/main' }}
+      with:
+        # The snapshot flag is needed since we do not want to require a tag just
+        # for building this.
+        args: build --clean --snapshot
+        workdir: ./cli
+      env:
+        # When running in this mode, goreleaser requires the cli version to be
+        # provided via an env var.
+        CLIVERSION: ci-cd
+
     - name: Set CLIVERSION env var on tag
       if: startsWith(github.ref, 'refs/tags/')
       run: echo "CLIVERSION=$(git describe --exact-match --tags | sed 's/^v//')" >> $GITHUB_ENV
 
     - name: Release binaries on tag
-      uses: goreleaser/goreleaser-action@v2
+      uses: goreleaser/goreleaser-action@v4
       if: startsWith(github.ref, 'refs/tags/')
       with:
         args: release --clean
