--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,16 @@ on:
   pull_request:
     branches: main
 
+# Ensure there is only ever one workflow of this kind running at a time.
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   ci:
     runs-on: ubuntu-latest
+    # Avoid very long running jobs.
+    timeout-minutes: 60
 
     steps:
     - name: Checkout repository
