Add unit tests for serve command

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -39,3 +39,11 @@ linters:
     - stylecheck
     - unused
   fast: false
+
+issues:
+  exclude-rules:
+    # Exclude some linters from running on tests files.
+    - path: _test\.go
+      linters:
+        - dupl
+        - gosec
