--- a/core/Makefile
+++ b/core/Makefile
@@ -7,6 +7,11 @@ setup:
 	go mod download
 	go mod tidy
 
+.PHONY: update-deps
+update-deps:
+	go get -t -u
+	$(MAKE) setup
+
 .PHONY: lint
 lint:
 	golangci-lint run .
