--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,19 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt-get install make
+        # System.
+        sudo apt-get install make wget curl
+        # Go.
+        curl -sSfL "${RAW_URL}/${LINT}" | sudo sh -s -- -b "${TARGET}" v1.55.0
+        # Custom.
+        sudo wget -O "${TARGET}/mdslw" "${MDSLW_URL}/${MDSLW_BIN}"
+        sudo chmod +x "${TARGET}/mdslw"
+      env:
+        RAW_URL: https://raw.githubusercontent.com
+        LINT: golangci/golangci-lint/master/install.sh
+        MDSLW_URL: https://github.com/razziel89/mdslw/releases/latest/download/
+        MDSLW_BIN: mdslw_x86_64-unknown-linux-musl
+        TARGET: /usr/local/bin
 
     - name: Set up project
       run: make setup
@@ -38,19 +50,8 @@ jobs:
     - name: Build binary
       run: make build
 
-    - name: Lint project, core part
-      uses: golangci/golangci-lint-action@v3
-      with:
-        working-directory: core
-        version: latest
-        skip-go-installation: true
-
-    - name: Lint project, cli part
-      uses: golangci/golangci-lint-action@v3
-      with:
-        working-directory: cli
-        version: latest
-        skip-go-installation: true
+    - name: Lint project
+      run: make lint
 
     - name: Build all release binaries on main
       uses: goreleaser/goreleaser-action@v4
@@ -67,7 +68,10 @@ jobs:
 
     - name: Set CLIVERSION env var on tag
       if: startsWith(github.ref, 'refs/tags/')
-      run: echo "CLIVERSION=$(git describe --exact-match --tags | sed 's/^v//')" >> $GITHUB_ENV
+      run: |
+        echo >> $GITHUB_ENV "CLIVERSION=$(
+          git describe --exact-match --tags | sed 's/^v//'
+        )"
 
     - name: Release binaries on tag
       uses: goreleaser/goreleaser-action@v4
