--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,11 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
   cancel-in-progress: true
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_TAG: latest
+
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -115,3 +120,58 @@ jobs:
           git add README.md &&
           git commit -m "Auto-update coverage badges [skip ci] [ci skip]" &&
           git push origin main || :
+
+  docker-ci:
+    needs: [ci]
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Determine docker tags and whether to push
+        env:
+          REF: ${{ github.ref }}
+        run: |
+          if [[ ${REF} == "refs/tags/"* ]]; then
+            echo "DOCKER_DO_PUSH=true"
+            version=$(git describe --exact-match --tags | sed 's/^v//')
+            echo "DOCKER_TAGS=${REGISTRY}/${IMAGE_NAME}:${IMAGE_TAG},${REGISTRY}/${IMAGE_NAME}:${version}"
+          else
+            echo "DOCKER_DO_PUSH=false"
+            echo "DOCKER_TAGS=${REGISTRY}/${IMAGE_NAME}:${IMAGE_TAG}"
+          fi >> $GITHUB_ENV
+
+      - uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: docker/metadata-action@v5
+        id: extract-metadata
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - uses: docker/build-push-action@v6
+        id: push
+        with:
+          context: .
+          push: ${{ env.DOCKER_DO_PUSH }}
+          tags: ${{ env.DOCKER_TAGS }}
+          labels: ${{ steps.extract-metadata.outputs.labels }}
+
+      - name: Generate artifact attestation
+        if: ${{ env.DOCKER_DO_PUSH == 'true' }}
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
