--- a/cli/.goreleaser.yml
+++ b/cli/.goreleaser.yml
@@ -1,11 +1,12 @@
+version: 2
 before:
   hooks:
     - go mod tidy
 builds:
-  - goos:
+  - id: unix
+    goos:
       - linux
       - darwin
-      - windows
     goarch:
       - amd64
       - arm64
@@ -15,3 +16,25 @@ builds:
       - -s -w -X "main.versionString={{.Env.CLIVERSION}}"
     env:
       - CGO_ENABLED=0
+  - id: windows
+    goos:
+      - windows
+    goarch:
+      - amd64
+      - arm64
+      - 386
+    ldflags:
+      - -s -w -X "main.versionString={{.Env.CLIVERSION}}"
+    env:
+      - CGO_ENABLED=0
+archives:
+  - id: windows
+    formats:
+      - "zip"
+    ids:
+      - windows
+  - id: unix
+    formats:
+      - "tar.gz"
+    ids:
+      - unix
